# mas-framework

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTHORIZATION.md  CLAUDE.md  DOCUMENTATION.md  GATEWAY.md  README.md  agents.yaml.example  conftest.py  docker-compose.yml  foreman.repo.toml  gateway.yaml.example  mas.yaml.example  prod.md  pyproject.toml  pytest.ini  test_message.py
.beads/: issues.jsonl
.codex/: config.toml
.codex/environments/: environment.toml
.github/workflows/: integration-tests.yml  release.yml  workflow.yml
apps/mas-ops-api/: openapi.json  pyproject.toml
apps/mas-ops-api/alembic/: env.py
apps/mas-ops-api/alembic/versions/: 0f8d8e9f5b42_phase_5_alerting_persistence.py  2c0c77d9c6a1_phase_3_incident_cockpit.py  3a5523821094_phase_1_initial.py  4f9a1d7d6b2e_phase_4_approvals_and_config.py  8f3f4f2db25c_phase_2_network_visibility.py
apps/mas-ops-api/src/mas_ops_api/: __init__.py  __main__.py  app.py  services.py  settings.py
apps/mas-ops-api/src/mas_ops_api/api/: __init__.py  dependencies.py  schemas.py
apps/mas-ops-api/src/mas_ops_api/api/routes/: approvals.py  assets.py  auth.py  chat.py  clients.py  config.py  health.py  incidents.py  streams.py
apps/mas-ops-api/src/mas_ops_api/approvals/: __init__.py  actions.py  payloads.py  service.py  store.py
apps/mas-ops-api/src/mas_ops_api/audit/: __init__.py  service.py
apps/mas-ops-api/src/mas_ops_api/auth/: __init__.py  dependencies.py  passwords.py  service.py  types.py
apps/mas-ops-api/src/mas_ops_api/bootstrap/: __init__.py  admin.py  client.py
apps/mas-ops-api/src/mas_ops_api/chat/: __init__.py  execution.py  portfolio_assistant.py  service.py
apps/mas-ops-api/src/mas_ops_api/clients/: __init__.py  service.py
apps/mas-ops-api/src/mas_ops_api/config/: __init__.py  defaults.py  desired_state.py  runs.py  service.py  types.py
apps/mas-ops-api/src/mas_ops_api/connectors/: __init__.py  fabric_connector.py  in_process.py  portfolio_ingress.py  protocol.py  registry.py
apps/mas-ops-api/src/mas_ops_api/db/: __init__.py  base.py  bootstrap.py  migrations.py  models.py  session.py  types.py
apps/mas-ops-api/src/mas_ops_api/dogfood/: __init__.py  service.py
apps/mas-ops-api/src/mas_ops_api/incidents/: __init__.py  gateway.py  service.py
apps/mas-ops-api/src/mas_ops_api/projections/: __init__.py  portfolio_ingest.py  repository.py  source_ids.py  stream_payloads.py
apps/mas-ops-api/src/mas_ops_api/streams/: __init__.py  service.py  sse.py
apps/mas-ops-api/src/mas_ops_api/visibility/: __init__.py  runtime.py  stores.py
apps/mas-ops-api/tests/: __init__.py  conftest.py  test_bootstrap_admin.py  test_bootstrap_client.py  test_database.py  test_dogfood_monitor.py  test_migrations.py  test_ops_api.py  test_phase3_architecture.py  test_phase3_chat.py  test_phase4_approvals_and_config.py  test_phase5_hosts.py  test_portfolio_ingest.py  test_streams.py
apps/mas-ops-ui/: index.html  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
apps/mas-runtime/: pyproject.toml
apps/mas-runtime/src/mas_runtime/: __init__.py  _test_support.py  cli.py  runner.py
apps/mas-runtime/tests/: test_runner.py
docker/mas-runtime/: Dockerfile  bootstrap.sh
docker/ops-api/: Dockerfile
docker/ops-ui/: Dockerfile  nginx.conf
docs/: architecture.md  msp-architecture.md  msp-implementation-plan.md  msp-phase-0-foundations.md  msp-phase-1-ops-plane.md  msp-phase-2-network-visibility.md  msp-phase-3-incident-cockpit.md  msp-phase-4-approvals-and-config.md  msp-phase-5-host-observability-and-remediation.md
examples/chemistry_tutoring/: main.py  professor_agent.py  student_agent.py
examples/e2e_ping_pong/: README.md  agents.py  (+6 more)
integration_tests/: test_end_to_end.py  test_gateway_integration.py  test_multi_instance.py  test_reply_binding.py  test_transport_edge_cases.py  test_typed_dispatch.py
tests/: __init__.py  conftest.py  test_agent_request_cleanup.py  test_agents_integration.py  test_audit_query.py  test_auth_manager.py  test_circuit_breaker.py  test_config.py  test_dlp.py  test_gateway.py  test_gateway_dlp_integration.py  test_gateway_integration.py  test_integration_message.py  test_message_signing.py  test_message_validation.py  test_metrics.py  test_multi_instance.py  test_performance.py  test_priority_queue.py  test_redis_efficiency.py  test_regression.py  test_request_response.py  test_runner.py  test_server_backpressure.py  test_simple_messaging.py  test_transport_service.py  test_typed_dispatch.py  test_typing_game_tui_helpers.py
(+126 files in other folders)
