[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-workspace"
version = "0.4.5"
description = "MAS workspace"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
line-length = 88
exclude = ["packages/mas-proto/src/mas_proto/runtime/v1"]

[tool.ty.src]
exclude = [
    "./examples/",
    "./packages/mas-proto/src/mas_proto/runtime/v1/",
    "./packages/*/tests/",
    "./apps/*/tests/",
    "./integration_tests/",
]

[tool.ty.rules]

[tool.ty.environment]
root = [
    "./packages/mas-proto/src/",
    "./packages/mas-core/src/",
    "./packages/mas-gateway/src/",
    "./packages/mas-agent/src/",
    "./packages/mas-server/src/",
    "./apps/mas-runtime/src/",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.4",
    "pytest-timeout>=2.3.1",
    "openai>=2.16.0",
    "pydantic-ai>=1.10.0",
    "types-redis>=4.6.0.20241004",
    "grpcio-tools>=1.76.0",
    "types-protobuf>=6.32.1.20251210",
    "ty>=0.0.8",
]
