[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-workspace"
version = "0.4.5"
description = "MAS workspace"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
line-length = 88
exclude = ["packages/mas-proto/src/mas_proto/runtime/v1"]
target-version = "py313"


[tool.ruff.lint]
select = ["PLC0415", "RUF", "UP", "I", "F", "B", "SIM", "E", "PLC", "PLE", "PLW"]
ignore = ["B008"]

[tool.ty.rules]
redundant-cast = "error"
unused-ignore-comment = "warn"
possibly-missing-attribute = "error"
possibly-missing-import = "error"

[tool.ty.analysis]
respect-type-ignore-comments = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "pytest-timeout>=2.4.0",
    "openai>=2.44.0",
    "pydantic-ai>=2.0.0",
    "grpcio-tools>=1.81.1",
    "types-protobuf>=7.34.1.20260518",
    "ty>=0.0.54",
]
