[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-ops-api"
version = "0.4.5"
description = "MSP ops-plane API"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.118.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "mas-msp-contracts",
    "mas-msp-core",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "psycopg[binary]>=3.2.10",
    "aiosqlite>=0.21.0",
]

[project.scripts]
mas-ops-api = "mas_ops_api.__main__:main"

[tool.uv.sources]
mas-msp-contracts = { workspace = true }
mas-msp-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mas_ops_api"]
