[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-runtime"
version = "0.4.5"
description = "MAS runtime app and CLI"
requires-python = ">=3.13"
dependencies = [
    "mas-agent",
    "mas-core",
    "mas-gateway",
    "mas-server",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
mas-runtime = "mas_runtime.cli:main"

[tool.uv.sources]
mas-agent = { workspace = true }
mas-core = { workspace = true }
mas-gateway = { workspace = true }
mas-server = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mas_runtime"]
